--- a/public/es6/es6-4.html
+++ b/public/es6/es6-4.html
@@ -1,5 +1,5 @@
 <script>
-	//ES6의 객체 - literal객체; constructor객체
+	//ES5의 객체 - literal객체; constructor객체(생성자객체)
 
 	const obj = {
 		a:1,
@@ -13,10 +13,31 @@
 		return this;
 	}
 
+	Hero.prototype.fly = function(){
+		console.log(this.name + "fdsfds gfdgfds");
+	}
+
 	const superMan = new Hero();
 	superMan.name = "superman";
 	console.log(superMan);
+	superMan.fly();
 
 
-	
+
+// ES6의 객체-생성자객체
+class Wizard {
+	constructor(name, hp) {
+		this.name = name;
+		this.hp = hp;
+	}
+	attact(enemy) {
+		let damage = Math.floor(Math.random()*100);
+		console.log(enemy+'에게 '+ damage + '의 피해를 주었습니다.');
+	}
+}
+
+const myWizard = new Wizard('마법사', 1000);
+console.log(myWizard);
+myWizard.attact('오크추장');
+
 </script>
